--- a/index.html
+++ b/index.html
@@ -1,5 +1,32 @@
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+
+<head>
+<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
+<title>CUSHY</title>
+<link href='stylesheet.css' rel='stylesheet'/>
+</head>
+
 <body>
-Test
+<div id="page">
+<div id="header">
+<img alt="CUSHY" src="site-em-construcao.png"/>
+</div>
+<div id="content">
+	<img alt="CUSHY" src="cushy.png"/>
+</div>
+
+<div id="footer">
+<center>
+<BR>
+<BR>
+<BR>
+</center>
+<!--<img alt="CUSHY" src="elegancia-e-beleza.png"/>-->
+</div>
+
+</div>
+<div ></div>
 </body>
+
 </html>
